--- a/video-detail.html
+++ b/video-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BanonymousYT Video Detail Page</title>
+    <title>mymomhadname Video Detail Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -27,7 +27,7 @@ https://templatemo.com/tm-556-catalog-z
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                BanonymousYT
+                mymomhadname
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -221,13 +221,13 @@ https://templatemo.com/tm-556-catalog-z
         <div class="container-fluid tm-container-small">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12 px-5 mb-5">
-                    <h3 class="tm-text-primary mb-4 tm-footer-title">About BanonymousYT</h3>
-                    <p>Subscribe to My <a rel="sponsored" href="https://www.youtube.com/channel/UCqYcRIMGERankxWkZRt_rzg">Youtube Channel</a> For More Future Scripts.</p>
+                    <h3 class="tm-text-primary mb-4 tm-footer-title">About mymomhadname</h3>
+                    <p>Subscribe to My <a rel="sponsored" href="https://www.youtube.com/channel/UCgKKLnH0Blea9SFwzXei1RQ">Youtube Channel</a> For More Future Scripts.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Our Links</h3>
                     <ul class="tm-footer-links pl-0">
-                        <li><a href="https://www.youtube.com/channel/UCqYcRIMGERankxWkZRt_rzg"></a>Youtube</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCgKKLnH0Blea9SFwzXei1RQ"></a>Youtube</a></li>
                         <li><a href="#">CodeMasterMind</a></li>
                     </ul>
                 </div>
